821:bug/Unsplash is not styled for dark mode

--- a/styles/_editorjs.scss
+++ b/styles/_editorjs.scss
@@ -226,10 +226,28 @@
       }
       .inline-image__control-panel{
        
-        border:1px solid lightgrey;
+        border:1px solid lightgrey ;
+        .panel-scroll{
+          &::-webkit-scrollbar {
+            width: 16px;
+          }
+          
+          &::-webkit-scrollbar-track {
+            background: transparent; 
+          }
+           
+          &::-webkit-scrollbar-thumb {
+            background: var(--scrollbar-thumb-color); 
+          }
+          
+         
+          
+        }
+        
         .inline-image__image-gallery{
           background-color:transparent;
         }
+       
       }
     }
   }
